--- a/Resources/translations/DukecityCommandScheduler.nl.xlf
+++ b/Resources/translations/DukecityCommandScheduler.nl.xlf
@@ -142,6 +142,10 @@
                  <source>detail.notes</source>
                  <target>notes</target>
             </trans-unit>
+            <trans-unit id="221">
+                 <source>detail.card.header.title</source>
+                 <target>Commando</target>
+            </trans-unit>
 
             <!-- Flashs messages -->
             <trans-unit id="300">
