--- a/Resources/translations/DukecityCommandScheduler.pt-br.xlf
+++ b/Resources/translations/DukecityCommandScheduler.pt-br.xlf
@@ -143,6 +143,10 @@
                  <source>detail.notes</source>
                  <target>notes</target>
             </trans-unit>
+            <trans-unit id="221">
+                 <source>detail.card.header.title</source>
+                 <target>Comando</target>
+            </trans-unit>
 
             <!-- Flashs messages -->
             <trans-unit id="300">
