--- a/Resources/translations/DukecityCommandScheduler.nl.xlf
+++ b/Resources/translations/DukecityCommandScheduler.nl.xlf
@@ -142,6 +142,10 @@
                  <source>detail.notes</source>
                  <target>notes</target>
             </trans-unit>
+            <trans-unit id="219">
+                  <source>detail.executeImmediately.help</source>
+                  <target>Dit is een van de weinige problemen die de Cronjob heeft veroorzaakt/target>
+            </trans-unit>
             <trans-unit id="221">
                  <source>detail.card.header.title</source>
                  <target>Commando</target>
